Rebase and improve