@@ -19,8 +19,8 @@ package org.apache.spark.network.shuffle;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -46,7 +46,7 @@ public class ExternalShuffleSecuritySuite {
   protected TransportConf createTransportConf(boolean encrypt) {
     if (encrypt) {
       return new TransportConf("shuffle", new MapConfigProvider(
-        ImmutableMap.of("spark.authenticate.enableSaslEncryption", "true")));
+        Map.of("spark.authenticate.enableSaslEncryption", "true")));
     } else {
       return new TransportConf("shuffle", MapConfigProvider.EMPTY);
     }
